feat: increase game difficult

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,13 +10,6 @@
 <body>
     <div id="game-container">
         <canvas id="game-canvas"></canvas>
-        <div class="lane-markers">
-            <div class="lane-marker">A</div>
-            <div class="lane-marker">S</div>
-            <div class="lane-marker">D</div>
-            <div class="lane-marker">F</div>
-            <div class="lane-marker">G</div>
-        </div>
         <div id="score">Score: <span id="score-value">0</span></div>
     </div>
 
